Fixed mobile overflow

--- a/styles/Pages/PostPage.module.css
+++ b/styles/Pages/PostPage.module.css
@@ -5,8 +5,11 @@
 }
 
 .wrapper {
-    @apply flex flex-col items-center p-6 gap-6 justify-center;
-    max-width: 700px;
+    @apply flex flex-col items-center 
+    p-6 gap-6 justify-center
+    max-w-2xl
+    max-md:w-full
+    ;
 }
 
 .post {
@@ -42,6 +45,21 @@
 
 .postHeaderTitle {
     @apply text-3xl font-bold;
+}
+
+.postContent {
+    @apply w-full;
+    max-width: 600px;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    hyphens: auto;
+}
+
+.postContentText {
+    @apply w-full;
+    overflow: hidden;
+    overflow-wrap: break-word;
 }
 
 .postInteractions {
@@ -104,10 +122,11 @@
 
 .comments {
     @apply w-full flex flex-col gap-6;
+    overflow: hidden;
 }
 
 .commentsInteractions, .commentsInteractionsSort {
-    @apply w-full;
+    @apply w-2/3;
 }
 
 .commentsInteractionsSort {
@@ -116,7 +135,7 @@
 }
 
 .commentsList {
-    @apply flex flex-col gap-6;
+    @apply flex flex-col gap-6 w-full;
 }
 
 .postBodyMedia {
